<resources>
    <string name="app_name">佰家赛事</string>
    <string name="home_tab_title1">赛事</string>
    <string name="home_tab_title2">佰家圈</string>
    <string name="home_tab_title3">运动</string>
    <string name="home_tab_title4">我的</string>

    <string name="event_apply_time">报名开始时间：</string>
    <string name="event_competition_time">报名结束时间：</string>

    <string name="hotel_screen">筛选</string>
    <string name="hotel_event">赛事酒店</string>

    <string name="hotel_detail">酒店详情</string>
    <string name="hotel_detail_intro">酒店介绍</string>
    <string name="hotel_detail_comment">查看全部评价</string>
    <string name="hotel_detail_order">预定</string>
    <string name="hotel_travel">周边旅游</string>

    <string name="my_order">我的订单</string>
    <string name="my_dynamic">我的动态</string>
    <string name="my_share">分享好友</string>
    <string name="my_setting">设置</string>

    <string name="notice_title">通知消息</string>

    <string name="login_title">注册</string>
    <string name="login">登录</string>
    <string name="login_area">+86</string>
    <string name="login_phone">请输入你的手机号</string>
    <string name="login_psw">请输入密码</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_sure">确定</string>
    <string name="login_weixin">微信登录</string>

    <string name="forget_psw">忘记密码</string>

    <string name="register_input_code">请输入验证码</string>
    <string name="register_get_code">发送验证码</string>
    <string name="register_agree">注册即视为同意</string>
    <string name="register_service">佰家运动服务协议</string>
    <string name="register_next">下一步</string>

    <string name="my_order_cancel">取消订单</string>
    <string name="my_order_pay">去支付</string>

    <string name="my_order_hotel">酒店订单</string>
    <string name="my_order_travel">旅游订单</string>
    <string name="order_detail">预定详情</string>
    <string name="order_hotel_room">房型名称:</string>
    <string name="order_hotel_people">入住人:</string>
    <string name="order_hotel_phone">联系手机:</string>
    <string name="order_hotel_enter_time">入住时间:</string>
    <string name="order_hotel_time">离店时间:</string>
    <string name="order_hotel_order_time">下单时间:</string>
    <string name="order_hotel_number">订单号:</string>

    <string name="order_travel_date">旅游日程</string>
    <string name="order_travel_people">乘客信息</string>
    <string name="order_travel_phone">手机号:</string>

    <string name="setting_title">设置</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_feedback">反馈建议</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_receiver">接收消息通知</string>
    <string name="setting_vision">软件版本</string>
    <string name="setting_phone">客服电话</string>
    <string name="setting_update">更新</string>
    <string name="setting_exit">退出当前账号</string>

    <string name="feedback_title">意见反馈</string>
    <string name="feedback_hint">谢谢大人的宝贵建议</string>
    <string name="feedback_add">添加图片</string>
    <string name="feedback_submit">提交</string>

    <string name="change_sign_hint">佰家运动</string>

    <string name="change_phone_old">请输入原手机号</string>
    <string name="change_phone_new">请输入新手机号</string>
    <string name="change_phone_sure">确定更改</string>

    <string name="change_psw_old">原密码</string>
    <string name="change_psw_new">新密码</string>

    <string name="hotel_room_type">类型：</string>
    <string name="hotel_room_floor">楼层：</string>
    <string name="hotel_room_facility">设施：</string>
    <string name="hotel_room_bed">床型：</string>
    <string name="hotel_room_breakfast">早餐：</string>
    <string name="hotel_room_residue">剩余房间数：</string>
    <string name="hotel_room_instructions">使用说明：</string>
    <string name="hotel_room_order">立即预定</string>
    <string name="hotel_room_sum">订单总额：</string>
    <string name="money">￥</string>
    <string name="hotel_room_phone">手机号</string>
    <string name="hotel_room_msg">便于发送预订消息</string>

    <string name="circle_publish">小佰提醒：请不要发布暴力色情信息、攻击性语言、否则将可能被系统员自动屏蔽，谢谢配合!</string>

    <string name="comment_hint">请输入评论内容..</string>
    <string name="comment_sure">评论</string>
    <string name="comment_back">回复</string>


    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>/
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="not_more">没有更多数据了</string>
    <!--报名滚动提醒内容-->
    <string name="tip">"为了能够快速报名,请正确填写您的报名信息,如有问题请及时与我们联系!"</string>
    <string name="webAddress">www.baijar.com</string>
    <string name="tel">085188622851</string>
    <string name="shareDownLoadUrl">http://shop.baijar.com/Home/AppDownload</string>
    <string name="intro">注:去年参与本赛事且拥有有效成绩的参赛者无需上传健康证明材料,其他参赛者报名全程与半程需要提供健康证明材料。</string>
    <string name="not_data">暂时还没有数据</string>
    <string name="error">加载失败，点击空白处加载</string>
    <string name="not_network">网络连接错误,点击设置网络</string>


    <string-array name="CountryList">
        <item>中国</item>
        <item>美国</item>
        <item>阿尔巴尼亚</item>
        <item>阿尔及利亚</item>
        <item>阿富汗</item>
        <item>阿根廷</item>
        <item>阿拉伯利比亚民众国</item>
        <item>阿拉伯联合酋长国</item>
        <item>阿拉伯叙利亚共和国</item>
        <item>阿鲁巴岛</item>
        <item>阿曼</item>
        <item>阿塞拜疆</item>
        <item>埃及</item>
        <item>埃塞俄比亚</item>
        <item>爱尔兰</item>
        <item>爱沙尼亚</item>
        <item>安道尔共和国</item>
        <item>安哥拉</item>
        <item>安圭拉岛</item>
        <item>安提瓜和巴布达</item>
        <item>奥地利</item>
        <item>澳大利亚</item>
        <item>巴巴多斯岛</item>
        <item>巴布亚新几内亚</item>
        <item>巴哈马群岛</item>
        <item>巴基斯坦</item>
        <item>巴拉圭</item>
        <item>巴勒斯坦</item>
        <item>巴林</item>
        <item>巴拿马</item>
        <item>巴西</item>
        <item>白俄罗斯</item>
        <item>百慕大群岛</item>
        <item>保加利亚</item>
        <item>北马里亚纳群岛</item>
        <item>贝宁湾</item>
        <item>比利时</item>
        <item>冰岛</item>
        <item>波多黎各</item>
        <item>波兰</item>
        <item>波斯尼亚和赫塞哥维纳</item>
        <item>玻利维亚</item>
        <item>伯利兹</item>
        <item>博茨瓦纳</item>
        <item>不丹</item>
        <item>布基纳法索</item>
        <item>布隆迪</item>
        <item>布韦岛</item>
        <item>朝鲜</item>
        <item>赤道几内亚</item>
        <item>丹麦</item>
        <item>德国</item>
        <item>东帝汶</item>
        <item>多哥</item>
        <item>多米尼加</item>
        <item>多米尼加共和国</item>
        <item>俄罗斯</item>
        <item>厄瓜多尔</item>
        <item>厄立特里亚</item>
        <item>法国</item>
        <item>法罗群岛</item>
        <item>法属玻利尼西亚</item>
        <item>法属圭亚那</item>
        <item>法属南半球领地</item>
        <item>梵蒂冈城国（罗马教廷）</item>
        <item>菲律宾</item>
        <item>斐济</item>
        <item>芬兰</item>
        <item>佛得角</item>
        <item>福克兰群岛（马尔维纳斯群岛）</item>
        <item>冈比亚</item>
        <item>刚果</item>
        <item>刚果（民主共和国）</item>
        <item>哥伦比亚</item>
        <item>哥斯达黎加</item>
        <item>格林纳达</item>
        <item>格陵兰</item>
        <item>古巴</item>
        <item>瓜德罗普岛</item>
        <item>关岛</item>
        <item>圭亚那</item>
        <item>哈萨克斯坦</item>
        <item>海地</item>
        <item>韩国</item>
        <item>荷兰</item>
        <item>荷属安的列斯群岛</item>
        <item>黑山共和国</item>
        <item>洪都拉斯</item>
        <item>基里巴斯</item>
        <item>吉布提</item>
        <item>吉尔吉斯斯坦</item>
        <item>几内亚</item>
        <item>几内亚比绍</item>
        <item>加拿大</item>
        <item>加纳</item>
        <item>加蓬</item>
        <item>柬埔寨</item>
        <item>捷克共和国</item>
        <item>津巴布韦</item>
        <item>喀麦隆</item>
        <item>卡塔尔</item>
        <item>开曼群岛</item>
        <item>科科斯(基林)群岛</item>
        <item>科摩罗</item>
        <item>科特迪瓦</item>
        <item>科威特</item>
        <item>克罗地亚</item>
        <item>肯尼亚</item>
        <item>库克群岛</item>
        <item>拉脱维亚</item>
        <item>莱索托</item>
        <item>老挝人民民主共和国</item>
        <item>黎巴嫩</item>
        <item>立陶宛</item>
        <item>利比里亚</item>
        <item>联合王国</item>
        <item>列支敦士登的</item>
        <item>留尼旺岛</item>
        <item>卢森堡公国</item>
        <item>卢旺达</item>
        <item>罗马尼亚</item>
        <item>马达加斯加岛</item>
        <item>马尔代夫</item>
        <item>马耳他</item>
        <item>马拉维</item>
        <item>马来西亚</item>
        <item>马里</item>
        <item>马其顿王国</item>
        <item>马绍尔群岛</item>
        <item>马提尼克岛</item>
        <item>马约特岛</item>
        <item>麦克唐纳</item>
        <item>毛里求斯</item>
        <item>毛利塔尼亚</item>
        <item>美国本土外小岛屿</item>
        <item>美国佐治亚州</item>
        <item>美属萨摩亚</item>
        <item>蒙古</item>
        <item>蒙特塞拉特岛</item>
        <item>孟加拉共和国</item>
        <item>秘鲁</item>
        <item>密克罗尼西亚</item>
        <item>缅甸</item>
        <item>摩尔多瓦</item>
        <item>摩洛哥</item>
        <item>摩纳哥</item>
        <item>莫桑比克</item>
        <item>墨西哥</item>
        <item>纳米比亚</item>
        <item>南非</item>
        <item>南极洲</item>
        <item>南乔治亚与南三明治群岛</item>
        <item>南苏丹</item>
        <item>瑙鲁</item>
        <item>尼泊尔</item>
        <item>尼加拉瓜</item>
        <item>尼日尔</item>
        <item>尼日利亚</item>
        <item>纽埃岛</item>
        <item>挪威</item>
        <item>诺福克岛</item>
        <item>帕劳群岛</item>
        <item>皮特克恩</item>
        <item>葡萄牙</item>
        <item>日本</item>
        <item>瑞典</item>
        <item>瑞士</item>
        <item>萨尔瓦多</item>
        <item>萨摩亚群岛</item>
        <item>塞尔维亚</item>
        <item>塞拉利昂</item>
        <item>塞内加尔</item>
        <item>塞浦路斯</item>
        <item>塞舌尔</item>
        <item>沙特阿拉伯</item>
        <item>圣诞岛</item>
        <item>圣多美和王子</item>
        <item>圣赫勒拿岛</item>
        <item>圣基茨岛和尼维斯</item>
        <item>圣卢西亚岛</item>
        <item>圣马力诺</item>
        <item>圣皮埃尔和密克隆圣</item>
        <item>圣文森特和格林纳丁斯</item>
        <item>斯里兰卡</item>
        <item>斯洛伐克（斯洛伐克共和国）</item>
        <item>斯洛文尼亚</item>
        <item>斯瓦尔巴群岛和扬马延岛</item>
        <item>斯威士兰</item>
        <item>苏丹</item>
        <item>苏里南</item>
        <item>所罗门群岛</item>
        <item>索马里</item>
        <item>塔吉克斯坦</item>
        <item>泰国</item>
        <item>坦桑尼亚</item>
        <item>汤加</item>
        <item>特克斯和凯科斯群岛</item>
        <item>特立尼达和多巴哥</item>
        <item>突尼斯</item>
        <item>图瓦卢</item>
        <item>土耳其</item>
        <item>土库曼斯坦</item>
        <item>托克劳群岛</item>
        <item>瓦利斯和富图纳群岛</item>
        <item>瓦努阿图</item>
        <item>危地马拉</item>
        <item>维尔京群岛（美国）</item>
        <item>委内瑞拉</item>
        <item>文莱达鲁萨兰国</item>
        <item>乌干达</item>
        <item>乌克兰</item>
        <item>乌拉圭</item>
        <item>乌兹别克斯坦</item>
        <item>西班牙</item>
        <item>西撒哈拉</item>
        <item>希腊</item>
        <item>新加坡</item>
        <item>新喀里多尼亚</item>
        <item>新西兰</item>
        <item>匈牙利</item>
        <item>牙买加</item>
        <item>亚美尼亚</item>
        <item>也门</item>
        <item>伊拉克共和国</item>
        <item>伊朗</item>
        <item>以色列</item>
        <item>意大利</item>
        <item>印度</item>
        <item>印尼</item>
        <item>英属维尔京群岛</item>
        <item>英属印度洋领地</item>
        <item>约旦河</item>
        <item>越南</item>
        <item>赞比亚</item>
        <item>乍得湖</item>
        <item>直布罗陀</item>
        <item>智利</item>
        <item>中非共和国</item>
    </string-array>

    <!--血型-->
    <string-array name="bloodList">
        <item>A型</item>
        <item>B型</item>
        <item>AB型</item>
        <item>O型</item>
        <item>不明</item>
        <item>其它</item>

    </string-array>
    <!--入住酒店证件类型-->
    <array name="hotel_idCardType">
        <item>身份证</item>
        <item>护照</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
