<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">
     <FrameLayout
         android:id="@+id/center"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
    <LinearLayout
        android:background="@color/bottomTabBar"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RadioGroup
            android:layout_marginTop="3dp"
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:gravity="center"
                android:button="@null"
                android:layout_weight="1"
                android:id="@+id/tab1"
                android:drawableTop="@drawable/home_bottom_tab1_selector"
                android:text="@string/home_tab_title1"
                android:textColor="@drawable/home_tab_text_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <RadioButton
                android:gravity="center"
                android:button="@null"
                android:layout_weight="1"
                android:id="@+id/tab2"
                android:drawableTop="@drawable/home_bottom_tab2_selector"
                android:text="@string/home_tab_title2"
                android:textColor="@drawable/home_tab_text_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <RadioButton
                android:gravity="center"
                android:button="@null"
                android:layout_weight="1"
                android:id="@+id/tab3"
                android:drawableTop="@drawable/home_bottom_tab3_selector"
                android:text="@string/home_tab_title3"
                android:textColor="@drawable/home_tab_text_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <RadioButton
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/tab4"
                android:drawableTop="@drawable/home_bottom_tab4_selector"
                android:text="@string/home_tab_title4"
                android:textColor="@drawable/home_tab_text_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
