<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tdin360.zjw.marathon.ui.activity.BindPhoneActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <include layout="@layout/toolbar_layout"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_tab_title_color_check"
                android:textSize="16sp"
                android:text="@string/login_area"
                android:layout_gravity="center"/>
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/hotel_address"/>
            <EditText
                android:id="@+id/et_bind_phone_new"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="16sp"
                android:inputType="phone"
                android:maxLength="11"
                android:lines="1"
                android:textColor="@color/hotel_address"
                android:hint="@string/login_phone"/>
            <ImageView
                android:id="@+id/iv_bind_phone_new_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:src="@drawable/login_cancel"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:paddingRight="10dp">
            <EditText
                android:id="@+id/et_bind_phone_input_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/register_input_code"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:inputType="phone"
                android:maxLength="6"
                android:layout_marginTop="5dp"
                android:lines="1"
                android:textColor="@color/hotel_address"/>
            <TextView
                android:id="@+id/tv_bind_phone_get_code"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:background="@drawable/shape_hotel_order"
                android:text="@string/register_get_code"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_bind_phone_sure"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sure"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/oval_green_button_selector" />
    </LinearLayout>

    <include layout="@layout/item_loading"/>

</RelativeLayout>
