<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="140dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/hotel" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="贵阳7天连锁酒店"
            android:background="@color/white_event_time"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_room_type"
            android:textColor="@color/day_division"
            android:textSize="14.7sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="亲子"
            android:textSize="14.7sp"
            android:textColor="@color/hotel_room"
            android:layout_marginLeft="15dp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/money"
            android:textColor="@color/home_tab_title_color_check"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="456"
            android:textColor="@color/home_tab_title_color_check"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="/间"
            android:textColor="@color/home_tab_title_color_check"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_room_floor"
            android:textColor="@color/day_division"
            android:textSize="14.7sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3层"
            android:textSize="14.7sp"
            android:textColor="@color/hotel_room"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_room_facility"
            android:textColor="@color/day_division"
            android:textSize="14.7sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="162 客房wifi覆盖162 客房wifi覆盖162 客房wifi覆盖"
            android:textSize="14.7sp"
            android:textColor="@color/hotel_room"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_room_bed"
            android:textColor="@color/day_division"
            android:textSize="14.7sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="大床"
            android:textSize="14.7sp"
            android:textColor="@color/hotel_room"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_room_breakfast"
            android:textColor="@color/day_division"
            android:textSize="14.7sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="无早餐"
            android:textSize="14.7sp"
            android:textColor="@color/hotel_room"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_room_residue"
            android:textColor="@color/day_division"
            android:textSize="14.7sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3间"
            android:textSize="14.7sp"
            android:textColor="@color/hotel_room"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_hotel_room_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="18dp"
        android:text="使用说明酒店VB你回家举报那好吧火女高防御换个吧仿v社保局你肌瘤留底"
        android:padding="10dp"/>
</LinearLayout>